--- a/Profile_Card/style.css
+++ b/Profile_Card/style.css
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Roboto:wght@100;300;400;500;700&display=swap');
 
 *{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 	font-family: 'Cinzel', serif;
 font-family: 'Roboto', sans-serif;
 }
@@ -9,15 +12,30 @@ font-family: 'Roboto', sans-serif;
 body{
 	height: 100vh;
 	display:flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #d472a3;
 }
 
+.card{
+	max-width: 400px;
+	width: 100%;
+	background: #dec8db;
+	border-radius: 25px;
+	padding: 26px;
+	box-shadow: 0 5px 10px #91818f;
+}
 .image{
 	position: relative;
 	height: 150px;
 	width: 150px;
 	border-radius: 50%;
-	background-color: ;
+	background-color: #db21c2;
 	padding: 3px;
+	margin-left: auto;
+	margin-right: 0;
+	margin-bottom: 10px;
+
 }
 
 .image .card-img{
@@ -26,4 +44,48 @@ body{
 	object-fit: cover;
 	border-radius: 50%;
 	border: 3px solid #fff;
+}
+
+.card .text-data{
+	display: flex;
+	flex-direction: column;
+
+}
+
+.text-data .name{
+	font-size: 22px;
+	font-weight: 500;
+}
+
+.card .media-buttons{
+	display:flex;
+	align-items: center;
+	margin-top: 20px;
+}
+.media-buttons .link{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #fff;
+	font-size: 20px;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	margin: 0 10px;
+	background-color:#fff;
+	text-decoration: none;
+}
+
+.card .buttons{
+	display: flex;
+	align-items: center;
+	margin-top: 25px;
+}
+
+.buttons .button{
+	margin: 0 10px ;
+	padding: 8px 24px;
+	border:none;
+	border-radius: 24px;
+	background-color:#91818f;
 }
